new file:   .gitignore 	new file:   .idea/.name 	new file:   .idea/codeStyles/Project.xml 	new file:   .idea/gradle.xml 	new file:   .idea/misc.xml 	new file:   .idea/runConfigurations.xml 	modified:   app/app.iml 	modified:   app/build.gradle 	new file:   app/libs/json-simple-1.1.jar 	modified:   app/src/main/java/com/example/roadrunnerdriverrr/ChatHeadService.java 	modified:   app/src/main/java/com/example/roadrunnerdriverrr/MainActivity.java 	modified:   app/src/main/java/com/example/roadrunnerdriverrr/MyDataManager.java 	new file:   app/src/main/java/com/example/roadrunnerdriverrr/PostcodeIOManager.java 	new file:   app/src/main/java/com/example/roadrunnerdriverrr/SingleDelivery.java 	new file:   app/src/main/java/com/example/roadrunnerdriverrr/ui/address/AddressFragment.java 	new file:   app/src/main/java/com/example/roadrunnerdriverrr/ui/address/AddressViewModel.java 	modified:   app/src/main/java/com/example/roadrunnerdriverrr/ui/home/HomeFragment.java 	modified:   app/src/main/java/com/example/roadrunnerdriverrr/ui/settings/SettingsFragment.java 	new file:   app/src/main/res/layout/fragment_address.xml 	modified:   app/src/main/res/layout/fragment_dashboard.xml 	modified:   app/src/main/res/layout/fragment_home.xml 	modified:   app/src/main/res/menu/bottom_nav_menu.xml 	modified:   app/src/main/res/navigation/mobile_navigation.xml 	modified:   app/src/main/res/values/strings.xml 	modified:   build.gradle

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,6 +12,12 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
+        android:id="@+id/navigation_address"
+        android:name="com.example.roadrunnerdriverrr.ui.address.AddressFragment"
+        android:label="@string/title_address"
+        tools:layout="@layout/fragment_address" />
+
+    <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.example.roadrunnerdriverrr.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
