--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/bAdd"
+        android:id="@+id/bAddDel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="88dp"
@@ -51,7 +51,7 @@
         android:text="Total: "
         android:textSize="32sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bAdd" />
+        app:layout_constraintTop_toBottomOf="@+id/bAddDel" />
 
     <TextView
         android:id="@+id/tvTotal"
