modified:   app/src/main/AndroidManifest.xml 	modified:   app/src/main/java/com/example/roadrunnerdriverrr/ChatHeadService.java 	modified:   app/src/main/java/com/example/roadrunnerdriverrr/MainActivity.java 	modified:   app/src/main/java/com/example/roadrunnerdriverrr/MyDataManager.java 	modified:   app/src/main/java/com/example/roadrunnerdriverrr/SingleDelivery.java 	modified:   app/src/main/java/com/example/roadrunnerdriverrr/ui/address/AddressFragment.java 	modified:   app/src/main/java/com/example/roadrunnerdriverrr/ui/home/HomeFragment.java 	modified:   app/src/main/res/layout/fragment_address.xml 	modified:   app/src/main/res/layout/fragment_home.xml

--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -38,6 +38,16 @@
 
             android:background="@android:drawable/toast_frame"
             android:text="Clear" />
+
+        <Button
+            android:id="@+id/bSaveLog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@android:drawable/toast_frame"
+            android:text="Save" />
     </LinearLayout>
 
     <LinearLayout
